fix: fix font-family for Rubis italic

--- a/docs/root.css
+++ b/docs/root.css
@@ -13,7 +13,7 @@
       format('truetype');
 }
 @font-face {
-  font-family: 'Rubis-Regular';
+  font-family: 'Rubis';
   font-style: italic;
   src: url(https://cdn.repub.ch/s3/republik-assets/fonts/rubis-regularitalic.eot);
   src: url(https://cdn.repub.ch/s3/republik-assets/fonts/rubis-regularitalic.eot?#iefix)
