fix(backend/mail): don't escape font-face styles in email templates

--- a/packages/backend-modules/mail/templates/comment_notification_new.html
+++ b/packages/backend-modules/mail/templates/comment_notification_new.html
@@ -13,18 +13,18 @@
       </xml>
     <![endif]-->
     <style type="text/css">
-      {{sg_font_faces}}
+      {{{sg_font_faces}}}
     </style>
     <!-- em and strong css for comment content (needs to be in head) -->
     <style type="text/css">
       em, i {
-        {{sg_font_style_serif_italic}}
+        {{{sg_font_style_serif_italic}}}
       }
       strong, b {
-        {{sg_font_style_serif_bold}}
+        {{{sg_font_style_serif_bold}}}
       }
       strong em, em strong, b i, i b {
-        {{sg_font_style_serif_bold_italic}}
+        {{{sg_font_style_serif_bold_italic}}}
       }
     </style>
   </head>
