feat: email wording change for otp autodetect

--- a/packages/backend-modules/mail/templates/signin_code.html
+++ b/packages/backend-modules/mail/templates/signin_code.html
@@ -43,8 +43,8 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Geben Sie zur Bestätigung Ihres Logins bitte folgende
-                      Ziffern auf der Republik-Website ein:
+                      Geben Sie zur Bestätigung Ihres Logins bitte folgenden
+                      Code auf der Republik-Website ein:
                     </p>
                     <table
                       width="100%"
@@ -63,7 +63,8 @@
                                   font-size: 30px;
                                   font-family: monospace;
                                   font-weight: bold;
-                                  color: #4b6359;
+                                  letter-spacing: 2px;
+                                  color: #282828;
                                   padding: 30px;
                                 "
                               >
@@ -75,7 +76,7 @@
                       </tr>
                     </table>
                     <p>
-                      Die Bestätigungsziffern sind nur einmal gültig. Sie können
+                      Das Passwort ist nur einmal gültig. Sie können
                       die E-Mail anschliessend löschen.
                     </p>
                     <p>
