--- a/packages/backend-modules/mail/templates/register_signin_code.html
+++ b/packages/backend-modules/mail/templates/register_signin_code.html
@@ -44,8 +44,8 @@
                     <p>Guten Tag</p>
                     <p>Herzlich willkommen bei der Republik!</p>
                     <p>
-                      Geben Sie zur Bestätigung Ihres Logins bitte folgende
-                      Ziffern auf der Republik-Website ein:
+                      Geben Sie zur Bestätigung Ihres Logins bitte folgenden
+                      Code auf der Republik-Website ein:
                     </p>
                     <table
                       width="100%"
@@ -64,7 +64,8 @@
                                   font-size: 30px;
                                   font-family: monospace;
                                   font-weight: bold;
-                                  color: #4b6359;
+                                  letter-spacing: 2px;
+                                  color: #282828;
                                   padding: 30px;
                                 "
                               >
@@ -76,7 +77,7 @@
                       </tr>
                     </table>
                     <p>
-                      Die Bestätigungsziffern sind nur einmal gültig. Sie können
+                      Die Passwort ist nur einmal gültig. Sie können
                       die E-Mail anschliessend löschen.
                     </p>
                     <p>
