fix(mail): update subscription transactional texts

--- a/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
@@ -46,14 +46,14 @@
                       entschieden haben.</p>
                       <p>
                         Das Monats-Abo verlängert sich automatisch jeweils um einen weiteren Monat.
-                        Die von Ihnen angegebene Kreditkarte belasten wir dementsprechend ab Beginn der
+                        Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend ab Beginn der
                         ersten Verlängerungsperiode monatlich mit CHF {{total_before_discount}}.-.
                       </p>
                       <p>
                         Unter
                         <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
                         <a href="{{link_account_abos_goto}}">persönliche Übersicht zu Ihrem Abonnement</a>. Am gleichen Ort können Sie alle Einstellungen vornehmen
-                        (z. B. Kreditkarteninformationen ändern) oder das Abo
+                        (z. B. die Zahlungsmethode ändern) oder das Abo
                         jederzeit kündigen.
                       </p>
                     <p>
@@ -72,7 +72,7 @@
                     <li>Monatlicher Preis: {{total_before_discount}} CHF</li>
                       {{#if discount_code}}
                       <li>
-                        Einstiegsangebot 7 CHF: –{{discount_total}} CHF
+                        Einstiegsangebot {{discount_total}} CHF: –{{discount_total}} CHF
                       </li>
                       {{/if}}
                       <li>
