--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -59,7 +59,7 @@
                     <li>Jährlicher Preis: {{total_before_discount}} CHF</li>
                       {{#if discount_code}}
                       <li>
-                        Einstiegsangebot 225 CHF: –{{discount_total}} CHF
+                        Einstiegsangebot {{discount_total}} CHF: –{{discount_total}} CHF
                       </li>
                       {{/if}}
                       <li>
@@ -68,15 +68,15 @@
                     </ul>
 
                     <p>
-                      Ihre Jahresmitgliedschaft verlängert sich automatisch.
-                      Die von Ihnen angegebene Kreditkarte belasten wir dementsprechend ab Beginn der
+                      Ihre Jahresmitgliedschaft verlängert sich automatisch. Wir senden Ihnen rechtzeitig vor der Verlängerung eine Erinnerung.
+                      Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend ab Beginn der
                       ersten Verlängerungsperiode in einem Jahr mit CHF {{total_before_discount}}.-.
                     </p>
                     <p>
                       Unter
                       <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
                       <a href="{{link_account_abos_goto}}">persönliche Übersicht zu Ihrer Mitgliedschaft</a>. Am gleichen Ort können Sie alle Einstellungen vornehmen
-                      (z. B. Kreditkarteninformationen ändern) oder die Mitgliedschaft
+                      (z. B. die Zahlungsmethode ändern) oder die Mitgliedschaft
                       jederzeit kündigen.
                     </p>
 
