fix(mail): remove reactivate and switch from monthly to yearly subscription from transactional texts, add translations for mail subjects

--- a/packages/backend-modules/mail/templates/subscription_ended_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_ended_monthly_subscription.html
@@ -54,7 +54,7 @@
                       Ihre Unterstützung bis hierhin! Und wir würden uns sehr
                       freuen, wenn Sie zu einem späteren Zeitpunkt wieder bei
                       uns vorbeischauten. Sie haben jederzeit die Möglichkeit,
-                      <a href="{{link_shop_monthly_subscription}}">Ihr Monatsabonnement zu reaktivieren</a> oder eine
+                      <a href="{{link_shop_monthly_subscription}}">wieder ein Monatsabonnement</a> oder eine
                       <a href="{{link_shop_yearly_subscription}}">Jahresmitgliedschaft</a>
                       abzuschliessen.
                     </p>
@@ -74,8 +74,8 @@
                       Zeitpunkt wieder bei uns vorbeischauten.
                     </p>
                     <p>
-                      Sie sind jederzeit willkommen und können
-                      <a href="{{link_shop_monthly_subscription}}">Ihr Monatsabo hier ganz einfach wieder aktivieren</a>.
+                      Sie sind jederzeit willkommen und können 
+                      <a href="{{link_shop_monthly_subscription}}">hier ganz einfach wieder ein Monatsabo abschliessen.</a>.
                     </p>
                     {{/if}}
                     <p>Herzlich</p>
