--- a/packages/backend-modules/mail/templates/subscription_ended_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_ended_yearly_subscription.html
@@ -54,7 +54,7 @@
                       Ihre Unterstützung bis hierhin! Und wir würden uns sehr
                       freuen, wenn Sie zu einem späteren Zeitpunkt wieder bei
                       uns vorbeischauten. Sie haben jederzeit die Möglichkeit,
-                      <a href="{{link_shop_yearly_subscription}}">Ihre Jahresmitgliedschaft zu reaktivieren</a>.
+                      <a href="{{link_shop_yearly_subscription}}">wieder eine Jahresmitgliedschaft abzuschliessen</a>.
                     </p>
                     <p>
                       Falls Sie Fragen haben, helfen wir Ihnen gerne weiter
@@ -73,7 +73,7 @@
                     </p>
                     <p>
                       Sie sind jederzeit willkommen und können
-                      <a href="{{link_shop_yearly_subscription}}">Ihre Mitgliedschaft hier ganz einfach wieder aktivieren</a>.
+                      <a href="{{link_shop_yearly_subscription}}">hier ganz einfach wieder eine Mitgliedschaft abschliessen</a>.
                     </p>
                     {{/if}}
                     <p>Herzlich</p>
