fix: adapt candidacy email

--- a/packages/backend-modules/mail/templates/election_candidacy_confirmation_gen24m.html
+++ b/packages/backend-modules/mail/templates/election_candidacy_confirmation_gen24m.html
@@ -42,31 +42,29 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>
-                      Sehr geehrte Verlegerin<br />
-                      sehr geehrter Verleger<br />
-                      and everyone beyond
+                      Hallo und guten Tag
                     </p>
                     <p>
-                      Vielen Dank für Ihr Engagement und herzlichen Glückwunsch:
-                      Sie kandidieren offiziell für den Genossenschaftsrat von
+                      Vielen Dank für dein Engagement und herzlichen Glückwunsch:
+                      Du kandidierst offiziell für den Genossenschaftsrat von
                       Project R.
                     </p>
                     <p>
-                      Zu Ihrer Information: Alle notwendigen Angaben haben wir
+                      Zu deiner Information: Alle notwendigen Angaben haben wir
                       erfasst.
                     </p>
                     <p>
-                      Bis zum 29. Oktober
-                      <a href="{{frontend_base_url}}/vote/2021/kandidieren?edit=true">können Sie Ihre Angaben ändern</a>, falls Sie das wünschen.
+                      Bis zum 26. Oktober
+                      <a href="{{frontend_base_url}}/kandidieren?edit=true">kannst du deine Angaben ändern</a>, falls gewünscht.
                     </p>
                     <p>
-                      Die Wahl selbst dauert vom 12. bis zum 28. November.
+                      Die Wahl selbst dauert vom 8. bis zum 24. November.
                       Zeitgleich zur Wahl findet eine Online-Debatte statt. Dort
-                      wird Ihr Statement in Ihrem Namen veröffentlicht. Während
-                      der Dauer der Wahl können die Mitglieder Ihnen Fragen
-                      stellen und Sie so ein bisschen besser kennenlernen. Wir
-                      freuen uns, wenn Sie in der Debatte präsent sind. Und wenn
-                      Sie sich für die eine oder andere Antwort Zeit nehmen.
+                      wird dein Statement in deinem Namen veröffentlicht. Während
+                      der Dauer der Wahl können die Mitglieder dir Fragen
+                      stellen und dich so ein bisschen besser kennenlernen. Wir
+                      freuen uns, wenn du in der Debatte präsent bist. Und wenn
+                      du dir für die eine oder andere Antwort Zeit nimmst.
                     </p>
                     <p>
                       Wir werden die Debatte moderieren und dafür sorgen, dass
@@ -74,14 +72,14 @@
                       eingehalten wird.
                     </p>
                     <p>
-                      Das Resultat der Wahl geben wir anfangs Dezember in einem
+                      Das Resultat der Wahl geben wir nach Abschluss der Urabstimmung in einem
                       Project-R-Newsletter bekannt.
                     </p>
                     <p>
-                      Wir wünschen Ihnen viel Erfolg und freuen uns auf eine
+                      Wir wünschen dir viel Erfolg und freuen uns auf eine
                       interessante Wahl.
                     </p>
-                    <p>Ihre Crew von Project R und Republik</p>
+                    <p>Deine Crew von Project R und Republik</p>
                   </td>
                 </tr>
                 <tr>
