fix(payments): add sync to mailchimp also when subscription period is updated, renamed the mailchimp worker

--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -68,16 +68,17 @@
                     </ul>
 
                     <p>
-                      Ihre Jahresmitgliedschaft verlängert sich automatisch. Wir senden Ihnen rechtzeitig vor der Verlängerung eine Erinnerung.
-                      Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend ab Beginn der
-                      ersten Verlängerungsperiode in einem Jahr mit CHF {{total_before_discount}}.-.
+                      Ihre Jahresmitgliedschaft verlängert sich automatisch zum Normalpreis. 
+                      Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend 
+                      in einem Jahr mit CHF {{total_before_discount}}.-. Wir senden Ihnen rechtzeitig 
+                      vor der Verlängerung eine Erinnerung. 
                     </p>
                     <p>
                       Unter
                       <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
                       <a href="{{link_account_abos_goto}}">persönliche Übersicht zu Ihrer Mitgliedschaft</a>. Am gleichen Ort können Sie alle Einstellungen vornehmen
                       (z. B. die Zahlungsmethode ändern) oder die Mitgliedschaft
-                      jederzeit kündigen.
+                      jederzeit kündigen (was wir nicht hoffen).
                     </p>
 
                     <p>Wir wünschen Ihnen viel Vergnügen mit der Republik.</p>
