fix(mail): only show zum Normalpreis in transactional if there is a discount

--- a/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
@@ -47,8 +47,7 @@
                       entschieden haben.
                     </p>
                     <p>
-                      Das Monats-Abo verlängert sich automatisch jeweils um
-                      einen weiteren Monat. Die von Ihnen angegebene
+                      Das Monats-Abo verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. Die von Ihnen angegebene
                       Zahlungsmethode belasten wir dementsprechend ab Beginn der
                       ersten Verlängerungsperiode monatlich mit CHF
                       {{total_before_discount}}.-.
