--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -68,7 +68,7 @@
                     </ul>
 
                     <p>
-                      Ihre Jahresmitgliedschaft verlängert sich automatisch zum Normalpreis. 
+                      Ihre Jahresmitgliedschaft verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. 
                       Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend 
                       in einem Jahr mit CHF {{total_before_discount}}.-. Wir senden Ihnen rechtzeitig 
                       vor der Verlängerung eine Erinnerung. 
