--- a/packages/backend-modules/mail/templates/subscription_ended_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_ended_yearly_subscription.html
@@ -49,17 +49,16 @@
                       wiederholt nicht von Ihrer gewählten Zahlungsmethode abbuchen und
                       mussten sie aus diesem Grund deaktivieren.
                     </p>
+                    <p>Das ist sehr schade.</p>
                     <p>
-                      Wir danken Ihnen herzlich für Ihr bisheriges Interesse und
-                      Ihre Unterstützung bis hierhin! Und wir würden uns sehr
-                      freuen, wenn Sie zu einem späteren Zeitpunkt wieder bei
-                      uns vorbeischauten. Sie haben jederzeit die Möglichkeit,
-                      <a href="{{link_shop_yearly_subscription}}">wieder eine Jahresmitgliedschaft abzuschliessen</a>.
+                      Die gute Nachricht: Sie haben jederzeit die Möglichkeit,
+                      <a href="{{link_shop_monthly_subscription}}">wieder ein Monatsabonnement</a> oder eine
+                      <a href="{{link_shop_yearly_subscription}}">Jahresmitgliedschaft</a>
+                      abzuschliessen - und wir helfen Ihnen gerne dabei: Melden Sie sich einfach via <a href="kontakt@republik.ch">kontakt@republik.ch</a> bei uns!
                     </p>
                     <p>
-                      Falls Sie Fragen haben, helfen wir Ihnen gerne weiter
-                      unter
-                      <a href="kontakt@republik.ch">kontakt@republik.ch</a>.
+                      Die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. 
+                      Jede zusätzliche Summe macht einen Unterschied.
                     </p>
                     {{else}}
                     <p>
@@ -76,7 +75,7 @@
                       <a href="{{link_shop_yearly_subscription}}">hier ganz einfach wieder eine Mitgliedschaft abschliessen</a>.
                     </p>
                     {{/if}}
-                    <p>Herzlich</p>
+                    <p>Herzliche Grüsse und hoffentlich bis bald</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
