--- a/packages/backend-modules/mail/templates/subscription_payment_failed_notice_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_payment_failed_notice_monthly_subscription.html
@@ -52,17 +52,21 @@
                       <a href="{{link_account_goto}}">www.republik.ch/konto</a>
                     </p>
                     <p>
-                      Wenn wir Ihre Zahlungsmethode weiterhin nicht belasten können, gehen
-                      wir davon aus, dass Sie die Republik nicht mehr lesen
-                      möchten, und deaktivieren Ihr Abonnement.
+                      Wenn wir Ihre Zahlungsmethode weiterhin nicht belasten können, 
+                      gehen wir davon aus, dass Sie die Republik nicht mehr lesen möchten, 
+                      und deaktivieren Ihr Abonnement. Das wäre sehr schade und wir hoffen, 
+                      dass es nicht so weit kommt.
                     </p>
                     <p>
-                      Haben Sie Fragen? Unter
-                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
-                      helfen wir Ihnen gerne weiter.
+                      Können wir Sie beim Einrichten der Zahlungsmethode unterstützen? Oder haben Sie eine andere Frage? Kein Problem, melden Sie sich einfach via 
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> 
+                      bei uns.
+                    </p>
+                    <p>Die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. 
+                      Jede zusätzliche Summe macht einen Unterschied. 
                     </p>
                     <p>
-                      Herzlich<br />
+                      Herzliche Grüsse<br />
                       Ihre Crew der Republik
                     </p>
                   </td>
