--- a/packages/backend-modules/mail/templates/subscription_revoke_cancellation_notice.html
+++ b/packages/backend-modules/mail/templates/subscription_revoke_cancellation_notice.html
@@ -46,7 +46,7 @@
                       Wir freuen uns, haben Sie Ihre Kündigung
                       zurückgenommen. Ihr Abonnement wurde wieder aktiviert und wird am {{renew_date}} automatisch erneuert. 
                     </p>
-                    <p>Weitere Informationen finden sie in Ihrem <a href="{{link_account_goto}}">Konto</a>.</p>
+                    <p>Weitere Informationen finden Sie in Ihrem <a href="{{link_account_goto}}">Konto</a>.</p>
                     <p>
                       Haben Sie Fragen? Unter
                       <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
