fix(mail): proper CHF spelling in transactionals

--- a/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
@@ -75,7 +75,7 @@
                     <p>
                       Das Monats-Abo verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. Die von Ihnen angegebene
                       Zahlungsmethode belasten wir dementsprechend ab dem kommenden Monat mit CHF
-                      {{total_before_discount}}.- monatlich.
+                      {{total_before_discount}}.– monatlich.
                     </p>
 
                     <p>
