--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -67,7 +67,7 @@
                     <p>
                       Ihre Jahresmitgliedschaft verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. 
                       Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend 
-                      in einem Jahr mit CHF {{total_before_discount}}.-.
+                      in einem Jahr mit CHF {{total_before_discount}}.–.
                     </p>
                     <p>
                       In Ihrem 
