fix(payments): small text fix in yearly transactional

--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -55,7 +55,7 @@
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <li>Monatlicher Preis: {{total_before_discount}} CHF</li>
+                      <li>Jährlicher Preis: {{total_before_discount}} CHF</li>
                       {{#if discount_code}}
                       <li>{{discount_code}}: –{{discount_total}} CHF</li>
                       {{/if}}
