fix(mail): fix transactional CHF writing

--- a/packages/backend-modules/mail/templates/subscription_payment_failed_notice_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_payment_failed_notice_yearly_subscription.html
@@ -43,7 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Leider konnten wir den Betrag von CHF {{total}}.– für Ihre Republik-Jahresmitgliedschaft nicht der 
+                      Leider konnten wir den Betrag von CHF {{total}} für Ihre Republik-Jahresmitgliedschaft nicht der 
                       von Ihnen angegebenen Zahlungsmethode belasten.
                     </p>
                     <p>
