--- a/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_monthly_subscription.html
@@ -63,19 +63,19 @@
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <li>Monatlicher Preis: {{total_before_discount}} CHF</li>
+                      <li>Monatlicher Preis: CHF {{total_before_discount}}</li>
                       {{#if discount_code}}
-                      <li>{{discount_code}}: –{{discount_total}} CHF</li>
+                      <li>{{discount_code}}: CHF –{{discount_total}}</li>
                       {{/if}}
                       <li>
-                        <strong>Total: {{total}} CHF</strong>
+                        <strong>Total: CHF {{total}}</strong>
                       </li>
                     </ul>
 
                     <p>
                       Das Monats-Abo verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. Die von Ihnen angegebene
                       Zahlungsmethode belasten wir dementsprechend ab dem kommenden Monat mit CHF
-                      {{total_before_discount}}.– monatlich.
+                      {{total_before_discount}} monatlich.
                     </p>
 
                     <p>
