--- a/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_yearly_subscription.html
@@ -55,19 +55,19 @@
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <li>Jährlicher Preis: {{total_before_discount}} CHF</li>
+                      <li>Jährlicher Preis: CHF {{total_before_discount}}</li>
                       {{#if discount_code}}
-                      <li>{{discount_code}}: –{{discount_total}} CHF</li>
+                      <li>{{discount_code}}: CHF –{{discount_total}}</li>
                       {{/if}}
                       <li>
-                        <strong>Total: {{total}} CHF</strong>
+                        <strong>Total: CHF {{total}}</strong>
                       </li>
                     </ul>
 
                     <p>
                       Ihre Jahresmitgliedschaft verlängert sich automatisch{{#if discount_code}} zum Normalpreis{{/if}}. 
                       Die von Ihnen angegebene Zahlungsmethode belasten wir dementsprechend 
-                      in einem Jahr mit CHF {{total_before_discount}}.–.
+                      in einem Jahr mit CHF {{total_before_discount}}.
                     </p>
                     <p>
                       In Ihrem 
