--- a/packages/backend-modules/mail/templates/subscription_payment_failed_notice_monthly_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_payment_failed_notice_monthly_subscription.html
@@ -43,7 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Leider konnten wir den Betrag von CHF {{total}}.– für Ihr Republik-Monatsabonnement nicht
+                      Leider konnten wir den Betrag von CHF {{total}} für Ihr Republik-Monatsabonnement nicht
                       Ihrer gewählten Zahlungsmethode belasten.
                     </p>
                     <p>
