--- a/packages/backend-modules/mail/templates/subscription_cancel_notice.html
+++ b/packages/backend-modules/mail/templates/subscription_cancel_notice.html
@@ -44,7 +44,7 @@
                     <p>Guten Tag</p>
                     <p>
                       Wir haben Ihre Kündigung
-                      erfasst. Ihr Abonnement läuft noch bis zum {{end_date}}
+                      erfasst. {{#if is_yearly}}Ihre Jahresmitgliedschaft{{else if is_monthly}}Ihr Monats-Abo{{else}}Ihr Abonnement{{/if}} läuft noch bis zum {{end_date}}
                       und wird nicht erneuert. 
                     </p>
                     <p>
